package camPackage;

message CAM {
	required int32 id = 1;
	required string content = 2;
	optional int64 createTime = 3;
}
