package denmPackage;

message DENM {
	required int32 id = 1;
	required string content = 2;
	optional int64 createTime = 3;
}
